--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/manifest.json">
 <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
+    <meta name="cmsmagazine" content="515b262ca2589ea0e0681acbbfca3aef" />
     <meta name="msapplication-TileColor" content="#000000">
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
